v1.0.2
-------
- Fixed bug where bootloader wasn't installing because the extlinux dir
  wasn't being created.
- Improved output of after install suggestions

v1.0.1
-------
- Added extlinux bootloader support
- Added my kernel configuration so people can have starting point
- Added a default fstab to the installer
- Installer now copies the stage3 and portage .tar.xz files to the new install